# SEL_PW3

./: .gitignore  CONTRIBUTING.md  README.md  definitions.py  implementation.ipynb  pyproject.toml  requirement.txt  requirements.txt
data/: case_base.xml  case_library.xml  ccc_cocktails.xml  ccc_sandwich.xml  data_cocktails.csv  foods.csv  processed-cocktails-data.pkl
documentation/: CBR PRESENTATION.pptx
source/: create_case_base.py  create_case_library.py  experimental.ipynb  helper.py
source/cbr/: adapt.py  case_library.py  evaluation.py  learn.py
source/entity/: cocktail.py
source/utils/: evaluation.py  helper.py
src/: create_case_library.py  experimental.ipynb  preprocess_data.ipynb  system_test.py
src/app/: CBR-LI.py  CBR-UI.pyproject  app.py  app.ui  cbr-cli.py  cbr_cli.py  form.ui  mainwindow.py  mainwindow.ui  widget.py
src/cbr/: adapt.py  case_library.py  cbr.py  evaluation.py  experimental.py  learn.py  retrieve.py  retrive.py
src/entity/: cocktail.py  query.py
src/interface/: index.html  main.css  main.js
src/utils/: helper.py  test-query.json  test-recipe.xml
system_tests/: test17-221838.txt  test17-221841.txt  test17-221910.txt  test17-221931.txt  test17-221949.txt  test17-222030.txt  test17-222048.txt  test18-193935.txt  test18-194057.txt  test18-194128.txt  test18-194204.txt  test18-194348.txt  test18-194619.txt  test18-194817.txt  test18-194908.txt  test18-195029.txt  test18-195102.txt  test18-195319.txt  test18-195536.txt  test18-205110.txt  test18-205141.txt  test18-205154.txt  test18-205158.txt  test18-205202.txt  test18-205207.txt  test18-205211.txt  test18-205217.txt  test18-205220.txt  test18-205248.txt  test18-205251.txt  test18-205800.txt  test18-205806.txt  test18-205812.txt  test18-205821.txt  test18-205829.txt  test18-205835.txt  test18-205841.txt  test18-205847.txt  test18-205854.txt  test18-205901.txt  (+34 more)
tests/: test_case_library.py
