[tool.poetry]
name = "sel_pw3"
version = "0.1.0"
description = ""
authors = ["Santiago del Rey Juarez <santiago.del.rey@estudiantat.upc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
lxml = "^4.8.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
